Chore: Bring config to usable level

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,8 @@
-$WOBSOCK $XDG_RUNTIME_DIR/wob.sock
-$modules $HOME/.config/sway/modules
+$WOBSOCK = $XDG_RUNTIME_DIR/wob.sock
+$modules = $HOME/.config/sway/modules
+$lock = swaylock -f -i ~/Pictures/Wallpapers/beach.jpg
+$vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
+$screenOff = hyprctl dispatch dpms off
 
 monitor=,1920x1080@60,0x0,1
 #monitor=,preferred,auto,1
@@ -25,31 +28,38 @@ general {
 
     gaps_in=5
     gaps_out=10
-    border_size=2
+    border_size=3
     col.active_border=0x88777777
     col.inactive_border=0x66333333
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+
+    cursor_inactive_timeout=0
 }
 
 decoration {
     rounding=10
-    blur=1
-    blur_size=3 # minimum 1
+    blur=true
+    blur_size=5 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
+    blur_new_optimizations=true
+    active_opacity=0.95
+    inactive_opacity=0.925
 }
 
 animations {
     enabled=1
     animation=windows,1,7,default
+    animation=windowsOut,1,10,default
     animation=border,1,10,default
     animation=fade,1,10,default
-    animation=workspaces,1,6,default
+    animation=workspaces,1,3,default,fade
+    animation=specialWorkspace,1,6,default
 }
 
 dwindle {
@@ -57,11 +67,16 @@ dwindle {
 }
 
 gestures {
-    workspace_swipe=1
+    workspace_swipe=true
     #workspace_swipe_distance=400
     workspace_swipe_invert=1
     workspace_swipe_min_speed_to_force=30
     workspace_swipe_cancel_ratio=0.5
+}
+
+misc {
+     no_vfr=false
+     mouse_move_enables_dpms=false
 }
 
 # example window rules
@@ -82,29 +97,30 @@ bind=SUPERSHIFT,F,exec,nautilus
 bind=SUPERSHIFT,O,exec,obsidian
 bind=SUPER,D,exec,rofi -show drun
 
-bind=SUPERSHIFT,A,exec,encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
+bind=SUPERSHIFT,A,exec,$vault
 bind=SUPER,I,exec,eww open calendar
 bind=SUPER,P,exec,eww close-all
 bind=SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
 bind=CTRLALT,L,exec,$modules/executable_sway_lock.sh
 bind=ALT,V,exec,$modules/executable_clipboard.sh
+bind=CTRLALT,L,exec,$lock
 
 bind=SUPER,Q,killactive,
-bind=SUPERALTSHIFT,E,exit,
+bind=CTRLALT,ESCAPE,exit,
 bind=SUPER,SPACE,togglefloating,
 bind=SUPER,F,fullscreen,1
 bind=SUPER,P,pseudo,
 bind=ALT,TAB,cyclenext,
 bind=SUPER,MINUS,togglespecialworkspace,
 
-bindl = ,XF86AudioRaiseVolume,exec,pamixer -ui 5 && pamixer --get-volume > $WOBSOCK
-bindl = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
-bindl = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
-bindl = ,XF86AudioPlay,exec,playerctl play-pause
-bindl = ,XF86AudioNext,exec,playerctl next
-bindl = ,XF86AudioPrev,exec,playerctl previous
-bindl = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
-bindl = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
+bindle = ,XF86AudioRaiseVolume,exec,pamixer -ui 5 && pamixer --get-volume > $WOBSOCK
+bindle = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
+bindle = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
+bindle = ,XF86AudioPlay,exec,playerctl play-pause
+bindle = ,XF86AudioNext,exec,playerctl next
+bindle = ,XF86AudioPrev,exec,playerctl previous
+bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
+bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 
 bind = ,PRINT,exec,grimshot --notify copy output
 bind = SUPER,PRINT,exec,grimshot --notify save output
@@ -154,14 +170,9 @@ submap=reset # will reset the submap, meaning end the current one and return to 
 
 # keybinds further down will be global again...
 
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=waybar
-exec-once=swayidle -w \
-    timeout 300 'swaymsg "output * dpms off"' \
-    resume 'swaymsg "output * dpms on"' \
-    timeout 315 'swaylock -f -i ~/Pictures/Wallpapers/beach.jpg' \
-    timeout 600 'systemctl suspend' \
-    after-resume 'swaymsg "output * dpms on"' \
-    before-sleep 'swaylock -f -c cccfff'\
+exec-once=swayidle -w timeout 300 '$screenOff' resume 'hyprctl dispatch dpms on' timeout 315 'swaylock -f -i ~/Pictures/Wallpapers/beach.jpg' timeout 600 'systemctl suspend' after-resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c cccfff'
 exec-once= wlsunset -l 22.6 -L 88.4
 exec-once= wl-paste --type text --watch clipman store --max-items=20
 exec-once= clipman restore
