--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,6 +3,7 @@ $modules = $HOME/.config/sway/modules
 $lock = swaylock -f -i ~/Pictures/Wallpapers/beach.jpg
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $screenOff = hyprctl dispatch dpms off
+$screenOn = hyprctl dispatch dpms on
 
 monitor=,1920x1080@60,0x0,1
 #monitor=,preferred,auto,1
@@ -48,7 +49,7 @@ decoration {
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations=true
-    active_opacity=0.95
+    active_opacity=1
     inactive_opacity=0.925
 }
 
@@ -84,9 +85,17 @@ misc {
 #windowrule=move 69 420,abc
 #windowrule=size 420 69,abc
 #windowrule=tile,xyz
-#windowrule=float,abc
+windowrule=center,^
+windowrule=float,org.gnome.Calculator
+windowrule=float,title:zoom
+windowrule=float,title:Zoom
+windowrule=float,title:Settings
+windowrule=float,title:Choose ONE of the audio conference options
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
+
+# Blur LayerSurfaces
+#blurls=namespace
 
 # example binds
 bind=SUPER,return,exec,alacritty
@@ -98,10 +107,10 @@ bind=SUPERSHIFT,O,exec,obsidian
 bind=SUPER,D,exec,rofi -show drun
 
 bind=SUPERSHIFT,A,exec,$vault
-bind=SUPER,I,exec,eww open calendar
+bind=SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
+bind=SUPER,I,exec,eww open date --toggle
 bind=SUPER,P,exec,eww close-all
 bind=SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
-bind=CTRLALT,L,exec,$modules/executable_sway_lock.sh
 bind=ALT,V,exec,$modules/executable_clipboard.sh
 bind=CTRLALT,L,exec,$lock
 
@@ -159,10 +168,10 @@ bind=ALT,R,submap,resize # will switch to a submap called resize
 
 submap=resize # will start a submap called "resize"
 
-bind=,right,resizeactive,10 0
-bind=,left,resizeactive,-10 0
-bind=,up,resizeactive,0 -10
-bind=,down,resizeactive,0 10
+binde=,right,resizeactive,10 0
+binde=,left,resizeactive,-10 0
+binde=,up,resizeactive,0 -10
+binde=,down,resizeactive,0 10
 
 bind=,escape,submap,reset # use reset to go back to the global submap
 
@@ -171,8 +180,8 @@ submap=reset # will reset the submap, meaning end the current one and return to 
 # keybinds further down will be global again...
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=waybar
-exec-once=swayidle -w timeout 300 '$screenOff' resume 'hyprctl dispatch dpms on' timeout 315 'swaylock -f -i ~/Pictures/Wallpapers/beach.jpg' timeout 600 'systemctl suspend' after-resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f -c cccfff'
+#exec-once=waybar
+exec-once=swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep 'swaylock -f -c cccfff'
 exec-once= wlsunset -l 22.6 -L 88.4
 exec-once= wl-paste --type text --watch clipman store --max-items=20
 exec-once= clipman restore
