Chore: eww(detach music from action) | waybar music max len

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -108,11 +108,14 @@ bind=SUPER,D,exec,rofi -show drun
 
 bind=SUPERSHIFT,A,exec,$vault
 bind=SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
-bind=SUPER,I,exec,eww open date --toggle
-bind=SUPER,P,exec,eww close-all
 bind=SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
 bind=ALT,V,exec,$modules/executable_clipboard.sh
 bind=CTRLALT,L,exec,$lock
+
+bind=SUPER,U,exec,eww open bar --toggle
+bind=SUPER,I,exec,eww open date --toggle
+bind=SUPER,O,exec,eww open music --toggle
+bind=SUPERALT,P,exec,eww close-all
 
 bind=SUPER,Q,killactive,
 bind=CTRLALT,ESCAPE,exit,
