--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,13 +183,14 @@ submap=reset # will reset the submap, meaning end the current one and return to 
 # keybinds further down will be global again...
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=waybar
+exec-once=waybar
 exec-once=swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep 'swaylock -f -c cccfff'
 exec-once= wlsunset -l 22.6 -L 88.4
 exec-once= wl-paste --type text --watch clipman store --max-items=20
 exec-once= clipman restore
 exec-once= mako
 exec-once= eww daemon
+exec-once= eww open workspace
 exec-once= kdeconnect-indicator
 exec-once= wob
 exec-once= rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
