Chore(eww, hyprland)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@ $lock = swaylock -f -i ~/Pictures/Wallpapers/beach.jpg
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
+$launcher = rofi -show drun -theme ~/.config/rofi/launcher.rasi
 
 monitor=,1920x1080@60,0x0,1
 #monitor=,preferred,auto,1
@@ -25,7 +26,6 @@ input {
 
 general {
     sensitivity=1.0 # for mouse cursor
-    main_mod=SUPER
 
     gaps_in=5
     gaps_out=10
@@ -85,7 +85,7 @@ misc {
 #windowrule=move 69 420,abc
 #windowrule=size 420 69,abc
 #windowrule=tile,xyz
-windowrule=center,^
+#windowrule=center,^
 windowrule=float,org.gnome.Calculator
 windowrule=float,title:zoom
 windowrule=float,title:Zoom
@@ -101,10 +101,10 @@ windowrule=float,title:Choose ONE of the audio conference options
 bind=SUPER,return,exec,alacritty
 bind=SUPERSHIFT,B,exec,firefox
 bind=SUPERSHIFT,E,exec,emacs
-bind=SUPERSHIFT,M,exec,tauon
+bind=SUPERSHIFT,M,exec,SDL_VIDEODRIVER=wayland tauon # Wayland prefered version coming up
 bind=SUPERSHIFT,F,exec,nautilus
-bind=SUPERSHIFT,O,exec,obsidian
-bind=SUPER,D,exec,rofi -show drun
+bind=SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind=SUPER,D,exec,$launcher
 
 bind=SUPERSHIFT,A,exec,$vault
 bind=SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
@@ -167,6 +167,9 @@ bind=ALT,9,movetoworkspace,9
 bind=ALT,0,movetoworkspace,10
 bind=ALT,MINUS,movetoworkspace,special
 
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPERSHIFT,mouse:272,resizewindow
+
 bind=ALT,R,submap,resize # will switch to a submap called resize
 
 submap=resize # will start a submap called "resize"
@@ -184,7 +187,7 @@ submap=reset # will reset the submap, meaning end the current one and return to 
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=waybar
-exec-once=swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep 'swaylock -f -c cccfff'
+exec-once=swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep '$lock'
 exec-once= wlsunset -l 22.6 -L 88.4
 exec-once= wl-paste --type text --watch clipman store --max-items=20
 exec-once= clipman restore
