--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
 $launcher = rofi -show drun -theme ~/.config/rofi/launcher.rasi
+$wob = $HOME/wob.sh
 
 monitor=,1920x1080@60,0x0,1
 #monitor=,preferred,auto,1
@@ -43,7 +44,7 @@ general {
 decoration {
     rounding=10
     blur=true
-    blur_size=5 # minimum 1
+    blur_size=8 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
@@ -80,6 +81,14 @@ misc {
      mouse_move_enables_dpms=false
 }
 
+binds {
+      workspace_back_and_forth=true
+}
+
+debug {
+      overlay=false
+}
+
 # example window rules
 # for windows named/classed as abc and xyz
 #windowrule=move 69 420,abc
@@ -91,6 +100,8 @@ windowrule=float,title:zoom
 windowrule=float,title:Zoom
 windowrule=float,title:Settings
 windowrule=float,title:Choose ONE of the audio conference options
+windowrule=float,title:Firefox — Sharing Indicator
+windowrule=move 1100 15,title:Firefox — Sharing Indicator
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
@@ -104,8 +115,10 @@ bind=SUPERSHIFT,E,exec,emacs
 bind=SUPERSHIFT,M,exec,SDL_VIDEODRIVER=wayland tauon # Wayland prefered version coming up
 bind=SUPERSHIFT,F,exec,nautilus
 bind=SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind=SUPER,D,exec,$launcher
+bind=SUPERSHIFT,Z,exec,GDK_BACKEND=x11 zotero # Wayland display not detected
+bind=SUPERSHIFT,C,exec,gnome-calculator
 
+bind=SUPER,D,exec,$launcher
 bind=SUPERSHIFT,A,exec,$vault
 bind=SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
 bind=SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
@@ -122,6 +135,7 @@ bind=CTRLALT,ESCAPE,exit,
 bind=SUPER,SPACE,togglefloating,
 bind=SUPER,F,fullscreen,1
 bind=SUPER,P,pseudo,
+bind=SUPER,EQUAL,pin
 bind=ALT,TAB,cyclenext,
 bind=SUPER,MINUS,togglespecialworkspace,
 
@@ -143,6 +157,16 @@ bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
+
+bind=SUPER,H,movefocus,l
+bind=SUPER,L,movefocus,r
+bind=SUPER,K,movefocus,u
+bind=SUPER,J,movefocus,d
+
+bind=SUPERSHIFT,H,movewindow,l
+bind=SUPERSHIFT,L,movewindow,r
+bind=SUPERSHIFT,K,movewindow,u
+bind=SUPERSHIFT,J,movewindow,d
 
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
@@ -195,6 +219,6 @@ exec-once= mako
 exec-once= eww daemon
 exec-once= eww open workspace
 exec-once= kdeconnect-indicator
-exec-once= wob
-exec-once= rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec-once= $wob
+exec-once= rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | $wob
 exec-once= hyprpaper
