--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
-preload = ~/Pictures/Wallpapers/beach.jpg
+#preload = ~/Pictures/Wallpapers/beach.jpg
+preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/beach.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/no-mans-sky.jpg
