--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,224 +1,14 @@
-$WOBSOCK = $XDG_RUNTIME_DIR/wob.sock
-$modules = $HOME/.config/sway/modules
-$lock = swaylock -f -i ~/Pictures/Wallpapers/beach.jpg
-$vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
-$screenOff = hyprctl dispatch dpms off
-$screenOn = hyprctl dispatch dpms on
-$launcher = rofi -show drun -theme ~/.config/rofi/launcher.rasi
-$wob = $HOME/wob.sh
+source = ~/.config/hypr/hyprland/main.conf
+source = ~/.config/hypr/hyprland/envvars.conf
+source = ~/.config/hypr/hyprland/windowRules.conf
+source = ~/.config/hypr/hyprland/specialKeys.conf
+source = ~/.config/hypr/hyprland/resize.conf
+source = ~/.config/hypr/hyprland/windowBinds.conf
+source = ~/.config/hypr/hyprland/userBinds.conf
+source = ~/.config/hypr/hyprland/autostart.conf
 
-monitor=,1920x1080@60,0x0,1
-#monitor=,preferred,auto,1
-
-input {
-    kb_layout=
-    kb_variant=
-    kb_model=
-    kb_options=caps:escape
-    kb_rules=
-    numlock_by_default=1
-
-    follow_mouse=1
-
-    touchpad {
-        natural_scroll=1
-    }
-}
-
-general {
-    sensitivity=1.0 # for mouse cursor
-
-    gaps_in=5
-    gaps_out=10
-    border_size=3
-    col.active_border=0x88777777
-    col.inactive_border=0x66333333
-
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-
-    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
-
-    cursor_inactive_timeout=0
-}
-
-decoration {
-    rounding=10
-    blur=true
-    blur_size=8 # minimum 1
-    blur_passes=1 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
-    blur_new_optimizations=true
-    active_opacity=1
-    inactive_opacity=0.925
-}
-
-animations {
-    enabled=1
-    animation=windows,1,7,default
-    animation=windowsOut,1,10,default
-    animation=border,1,10,default
-    animation=fade,1,10,default
-    animation=workspaces,1,3,default,fade
-    animation=specialWorkspace,1,6,default
-}
-
-dwindle {
-    pseudotile=0 # enable pseudotiling on dwindle
-}
-
-gestures {
-    workspace_swipe=true
-    #workspace_swipe_distance=400
-    workspace_swipe_invert=1
-    workspace_swipe_min_speed_to_force=30
-    workspace_swipe_cancel_ratio=0.5
-}
-
-misc {
-     no_vfr=false
-     mouse_move_enables_dpms=false
-}
-
-binds {
-      workspace_back_and_forth=true
-}
-
-debug {
-      overlay=false
-}
-
-# example window rules
-# for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-#windowrule=size 420 69,abc
-#windowrule=tile,xyz
-#windowrule=center,^
-windowrule=float,org.gnome.Calculator
-windowrule=float,title:zoom
-windowrule=float,title:Zoom
-windowrule=float,title:Settings
-windowrule=float,title:Choose ONE of the audio conference options
-windowrule=float,title:Firefox — Sharing Indicator
-windowrule=move 1100 15,title:Firefox — Sharing Indicator
-#windowrule=pseudo,abc
-#windowrule=monitor 0,xyz
+monitor = ,1920x1080@60,0x0,1
+#monitor = ,preferred,auto,1
 
 # Blur LayerSurfaces
 #blurls=namespace
-
-# example binds
-bind=SUPER,return,exec,alacritty
-bind=SUPERSHIFT,B,exec,firefox
-bind=SUPERSHIFT,E,exec,emacs
-bind=SUPERSHIFT,M,exec,SDL_VIDEODRIVER=wayland tauon # Wayland prefered version coming up
-bind=SUPERSHIFT,F,exec,nautilus
-bind=SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind=SUPERSHIFT,Z,exec,GDK_BACKEND=x11 zotero # Wayland display not detected
-bind=SUPERSHIFT,C,exec,gnome-calculator
-
-bind=SUPER,D,exec,$launcher
-bind=SUPERSHIFT,A,exec,$vault
-bind=SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
-bind=SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
-bind=ALT,V,exec,$modules/executable_clipboard.sh
-bind=CTRLALT,L,exec,$lock
-
-bind=SUPER,U,exec,eww open bar --toggle
-bind=SUPER,I,exec,eww open date --toggle
-bind=SUPER,O,exec,eww open music --toggle
-bind=SUPERALT,P,exec,eww close-all
-
-bind=SUPER,Q,killactive,
-bind=CTRLALT,ESCAPE,exit,
-bind=SUPER,SPACE,togglefloating,
-bind=SUPER,F,fullscreen,1
-bind=SUPER,P,pseudo,
-bind=SUPER,EQUAL,pin
-bind=ALT,TAB,cyclenext,
-bind=SUPER,MINUS,togglespecialworkspace,
-
-bindle = ,XF86AudioRaiseVolume,exec,pamixer -ui 5 && pamixer --get-volume > $WOBSOCK
-bindle = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
-bindle = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
-bindle = ,XF86AudioPlay,exec,playerctl play-pause
-bindle = ,XF86AudioNext,exec,playerctl next
-bindle = ,XF86AudioPrev,exec,playerctl previous
-bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
-bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
-
-bind = ,PRINT,exec,grimshot --notify copy output
-bind = SUPER,PRINT,exec,grimshot --notify save output
-bind = SHIFT,PRINT,exec,grimshot --notify copy area
-bind = SUPERSHIFT,PRINT,exec,grimshot --notify save area
-
-bind=SUPER,left,movefocus,l
-bind=SUPER,right,movefocus,r
-bind=SUPER,up,movefocus,u
-bind=SUPER,down,movefocus,d
-
-bind=SUPER,H,movefocus,l
-bind=SUPER,L,movefocus,r
-bind=SUPER,K,movefocus,u
-bind=SUPER,J,movefocus,d
-
-bind=SUPERSHIFT,H,movewindow,l
-bind=SUPERSHIFT,L,movewindow,r
-bind=SUPERSHIFT,K,movewindow,u
-bind=SUPERSHIFT,J,movewindow,d
-
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
-bind=SUPER,7,workspace,7
-bind=SUPER,8,workspace,8
-bind=SUPER,9,workspace,9
-bind=SUPER,0,workspace,10
-
-bind=ALT,1,movetoworkspace,1
-bind=ALT,2,movetoworkspace,2
-bind=ALT,3,movetoworkspace,3
-bind=ALT,4,movetoworkspace,4
-bind=ALT,5,movetoworkspace,5
-bind=ALT,6,movetoworkspace,6
-bind=ALT,7,movetoworkspace,7
-bind=ALT,8,movetoworkspace,8
-bind=ALT,9,movetoworkspace,9
-bind=ALT,0,movetoworkspace,10
-bind=ALT,MINUS,movetoworkspace,special
-
-bindm=SUPER,mouse:272,movewindow
-bindm=SUPERSHIFT,mouse:272,resizewindow
-
-bind=ALT,R,submap,resize # will switch to a submap called resize
-
-submap=resize # will start a submap called "resize"
-
-binde=,right,resizeactive,10 0
-binde=,left,resizeactive,-10 0
-binde=,up,resizeactive,0 -10
-binde=,down,resizeactive,0 10
-
-bind=,escape,submap,reset # use reset to go back to the global submap
-
-submap=reset # will reset the submap, meaning end the current one and return to the global one.
-
-# keybinds further down will be global again...
-
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=waybar
-exec-once=swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep '$lock'
-exec-once= wlsunset -l 22.6 -L 88.4
-exec-once= wl-paste --type text --watch clipman store --max-items=20
-exec-once= clipman restore
-exec-once= mako
-exec-once= eww daemon
-exec-once= eww open workspace
-exec-once= kdeconnect-indicator
-exec-once= $wob
-exec-once= rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | $wob
-exec-once= hyprpaper
