Chore: walls | suspend menu

--- a/.config/hypr/hyprland/envvars.conf
+++ b/.config/hypr/hyprland/envvars.conf
@@ -1,6 +1,6 @@
 $WOBSOCK = $XDG_RUNTIME_DIR/wob.sock
 $modules = $HOME/.config/sway/modules
-$lock = swaylock -f -i ~/Pictures/Wallpapers/no-mans-sky.jpg
+$lock = swaylock -f -i ~/Pictures/Wallpapers/7sq233wo9nb81.png
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
