--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,5 @@
 #preload = ~/Pictures/Wallpapers/beach.jpg
-preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
+#preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
+preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/no-mans-sky.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/7sq233wo9nb81.png
