--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -18,8 +18,8 @@ general {
 
     gaps_in = 5
     gaps_out = 10
-    border_size = 3
-    col.active_border = 0x88ffd173
+    border_size = 2
+    col.active_border = 0xff95e6cb
     col.inactive_border = 0x66cccac2
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -48,7 +48,7 @@ animations {
     animation = windowsOut,1,10,default
     animation = border,1,10,default
     animation = fade,1,10,default
-    animation = workspaces,1,3,default,slidevert
+    animation = workspaces,1,3,default,fade
     animation = specialWorkspace,1,6,default
 }
 
