--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 source = ~/.config/hypr/hyprland/main.conf
-source = ~/.config/hypr/hyprland/envvars.conf
+source = ~/.config/hypr/hyprland/variables.conf
 source = ~/.config/hypr/hyprland/windowRules.conf
 source = ~/.config/hypr/hyprland/specialKeys.conf
 source = ~/.config/hypr/hyprland/resize.conf
@@ -11,4 +11,4 @@ monitor = ,1920x1080@60,0x0,1
 #monitor = ,preferred,auto,1
 
 # Blur LayerSurfaces
-#blurls=namespace
+# blurls=waybar
