--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,18 +1,20 @@
 bind = SUPER,return,exec,alacritty
 bind = SUPERSHIFT,B,exec,firefox
 bind = SUPERSHIFT,E,exec,emacs
-bind = SUPERSHIFT,M,exec,SDL_VIDEODRIVER=wayland tauon # Wayland prefered version coming up
+bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
 bind = SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = SUPERSHIFT,Z,exec,GDK_BACKEND=x11 zotero # Wayland display not detected
 bind = SUPERSHIFT,C,exec,gnome-calculator
 
 bind = SUPER,D,exec,$launcher
-bind = SUPERSHIFT,A,exec,$vault
-bind = SUPERSHIFT,S,exec,encfs -u ~/Vaults/Han
+bind = SUPER,COMMA,exec,$vault
+bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
+bind = SUPER,PERIOD,exec,$games
 bind = SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
 bind = ALT,V,exec,$modules/executable_clipboard.sh
 bind = CTRLALT,L,exec,$lock
+bind = SUPER,S,exec,gnome-control-center
 
 bind = SUPER,U,exec,eww open bar --toggle
 bind = SUPER,I,exec,eww open date --toggle
