--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -4,12 +4,13 @@
 #windowrule=size 420 69,abc
 #windowrule=tile,xyz
 #windowrule=center,^
-windowrule = float,org.gnome.Calculator
-windowrule = float,title:zoom
-windowrule = fullscreen,title:Zoom Meeting
-windowrule = float,title:Settings
-windowrule = float,title:Choose ONE of the audio conference options
-windowrule = float,title:Firefox — Sharing Indicator
-windowrule = move 1100 15,title:Firefox — Sharing Indicator
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
+
+windowrule = pseudo,title:Zoom
+
+windowrule = float,title:Firefox — Sharing Indicator
+windowrule = move 1100 15,title:Firefox — Sharing Indicator
+
+windowrule = float,org.gnome.Calculator
+#windowrule = float,title:Storage
