--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -11,8 +11,8 @@ bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
-bind = SUPERSHIFT,Q,exec,$modules/executable_powermenu.sh
-bind = ALT,V,exec,$modules/executable_clipboard.sh
+bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
+bind = ALT,V,exec,$modules/clipboard.sh
 bind = CTRLALT,L,exec,$lock
 bind = SUPER,S,exec,gnome-control-center
 
