Chore: Animations, colors and blur

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -6,17 +6,19 @@ bind = SUPERSHIFT,F,exec,nautilus
 bind = SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = SUPERSHIFT,Z,exec,GDK_BACKEND=x11 zotero # Wayland display not detected
 bind = SUPERSHIFT,C,exec,gnome-calculator
+bind = SUPERSHIFT,S,exec,gnome-control-center
+bind = SUPERSHIFT,V,exec,code
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
 bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
-bind = ALT,V,exec,$modules/clipboard.sh
+bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
-bind = SUPER,S,exec,gnome-control-center
 
 bind = SUPER,U,exec,eww open bar --toggle
+bind = SUPER,Y,exec,eww open workspace --toggle
 bind = SUPER,I,exec,eww open date --toggle
 bind = SUPER,O,exec,eww open music --toggle
 bind = SUPERALT,P,exec,eww close-all
