--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -14,3 +14,4 @@ windowrule = move 1100 15,title:Firefox — Sharing Indicator
 
 windowrule = float,org.gnome.Calculator
 #windowrule = float,title:Storage
+windowrule = float,class:org.kde.kdeconnect.daemon
