--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,11 +16,11 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    gaps_in = 2.5
-    gaps_out = 5
+    gaps_in = 5
+    gaps_out = 10
     border_size = 2
-    col.active_border = 0xff95e6cb
-    col.inactive_border = 0x66cccac2
+    col.active_border = 0xff73d0ff
+    col.inactive_border = 0xaa95e6cb
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
@@ -39,18 +39,29 @@ decoration {
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations = true
     active_opacity = 1
-    inactive_opacity = 0.925
+    inactive_opacity = 0.85
 }
 
+bezier=slow,0,0.85,0.3,1
+bezier=overshot,0.7,0.6,0.1,1.1
+
 animations {
-    enabled = true
-    animation = windows,1,7,default
-    animation = windowsOut,1,10,default
-    animation = border,1,10,default
-    animation = fade,1,10,default
-    animation = workspaces,1,3,default,fade
-    animation = specialWorkspace,1,6,default
+    enabled=true
+    animation=windows,1,5,overshot,slide
+    animation=border,1,20,default
+    animation=fade,1,5,default
+    animation=workspaces,1,6,default,slide
 }
+
+# animations {
+#     enabled = true
+#     animation = windows,1,7,default
+#     animation = windowsOut,1,10,default
+#     animation = border,1,10,default
+#     animation = fade,1,10,default
+#     animation = workspaces,1,3,default,fade
+#     animation = specialWorkspace,1,6,default
+# }
 
 dwindle {
     pseudotile = false # enable pseudotiling on dwindle
