--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
 #preload = ~/Pictures/Wallpapers/beach.jpg
 #preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
-preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
+#preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
+#preload = ~/Pictures/Wallpapers/wallpapersden.com_cool-moonbreaker-hd_1920x1080.jpg
+preload = ~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/7sq233wo9nb81.png
+wallpaper = eDP-1,~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
