style: border color to yellow(fix contrast to wall)

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -11,6 +11,7 @@ bind = SUPERSHIFT,V,exec,code
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
+bind = SUPERALT,COMMA,exec,$vaultPersisent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
 bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
