--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ source = ~/.config/hypr/hyprland/windowBinds.conf
 source = ~/.config/hypr/hyprland/userBinds.conf
 source = ~/.config/hypr/hyprland/autostart.conf
 
-monitor = ,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
 #monitor = ,preferred,auto,1
 
 # Blur LayerSurfaces
