--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,10 +16,10 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    gaps_in = 2.5
-    gaps_out = 5
+    gaps_in = 3.75
+    gaps_out = 7.5
     border_size = 2
-    col.active_border = 0xff73d0ff
+    col.active_border = 0xffffd173
     col.inactive_border = 0xaa95e6cb
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
