style: change wall, margins, remove border

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,7 @@
 #preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
 #preload = ~/Pictures/Wallpapers/wallpapersden.com_cool-moonbreaker-hd_1920x1080.jpg
 #preload = ~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
-preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+#preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+preload = ~/Pictures/Wallpapers/dim-gunger-3emffQOvHxA-unsplash.jpg
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/dim-gunger-3emffQOvHxA-unsplash.jpg
