--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,16 +16,13 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    gaps_in = 3.75
-    gaps_out = 7.5
-    border_size = 2
-    col.active_border = 0xffffd173
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 0
+    col.active_border = 0x0073d0ff
     col.inactive_border = 0xaa95e6cb
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-
-    damage_tracking = full # leave it on full unless you hate your GPU and want to make it suffer
-
     cursor_inactive_timeout = 0
 }
 
@@ -39,7 +36,7 @@ decoration {
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations = true
     active_opacity = 1
-    inactive_opacity = 0.925
+    inactive_opacity = 0.95
 }
 
 bezier=slow,0,0.85,0.3,1
