chore: hyprland rules, waybar

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -4,14 +4,14 @@ bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
 bind = SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind = SUPERSHIFT,Z,exec,GDK_BACKEND=x11 zotero # Wayland display not detected
+bind = SUPERSHIFT,Z,exec,zotero
 bind = SUPERSHIFT,C,exec,gnome-calculator
 bind = SUPERSHIFT,S,exec,gnome-control-center
 bind = SUPERSHIFT,V,exec,code
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
-bind = SUPERALT,COMMA,exec,$vaultPersisent
+bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
 bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
