--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -13,5 +13,7 @@ windowrule = float,title:Firefox — Sharing Indicator
 windowrule = move 1100 15,title:Firefox — Sharing Indicator
 
 windowrule = float,org.gnome.Calculator
+windowrule = float,title:Reminder
+windowrule = float,title:About*
 #windowrule = float,title:Storage
 windowrule = float,class:org.kde.kdeconnect.daemon
