--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,9 +1,7 @@
 #preload = ~/Pictures/Wallpapers/beach.jpg
 #preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
 #preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
-#preload = ~/Pictures/Wallpapers/wallpapersden.com_cool-moonbreaker-hd_1920x1080.jpg
 #preload = ~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
-#preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
-preload = ~/Pictures/Wallpapers/dim-gunger-3emffQOvHxA-unsplash.jpg
+preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/dim-gunger-3emffQOvHxA-unsplash.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
