chore, style: wall, blur, rules

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -17,6 +17,7 @@ bind = SUPER,PERIOD,exec,$games
 bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
+bind = SUPER, C, exec, hyprpicker -a -n
 
 bind = SUPER,U,exec,eww open bar --toggle
 bind = SUPER,Y,exec,eww open workspace --toggle
