--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -7,10 +7,17 @@
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 
-windowrule = pseudo,title:Zoom
+# windowrule = pseudo,title:Zoom
+windowrule = float, zoom
 
-windowrule = float,title:Firefox — Sharing Indicator
-windowrule = move 1100 15,title:Firefox — Sharing Indicator
+windowrule = float,title:^(Picture-in-Picture)$
+windowrule = float,title:^(Firefox — Sharing Indicator)$
+windowrule = move 1100 15, title:^(Firefox — Sharing Indicator)$
+windowrule = noblur,^(firefox)$
+windowrule = opaque,^(firefox)$
+windowrule = idleinhibit fullscreen, firefox
+
+windowrule = idleinhibit focus, mpv
 
 windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
