--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -29,14 +29,14 @@ general {
 decoration {
     rounding = 10
     blur = true
-    blur_size = 8 # minimum 1
-    blur_passes = 2 # minimum 1, more passes = more resource intensive.
+    blur_size = 10 # minimum 1
+    blur_passes = 4 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations = true
-    active_opacity = 1
-    inactive_opacity = 0.95
+    active_opacity = 0.9
+    inactive_opacity = 0.9
 }
 
 bezier=slow,0,0.85,0.3,1
@@ -44,21 +44,25 @@ bezier=overshot,0.7,0.6,0.1,1.1
 
 animations {
     enabled=true
-    animation=windows,1,5,overshot,slide
-    animation=border,1,20,default
-    animation=fade,1,5,default
-    animation=workspaces,1,6,default,slide
-}
+    # animation=windows,1,5,overshot,slide
+    # animation=border,1,20,default
+    # animation=fade,1,5,default
+    # animation=workspaces,1,6,default,slide
 
-# animations {
-#     enabled = true
-#     animation = windows,1,7,default
-#     animation = windowsOut,1,10,default
-#     animation = border,1,10,default
-#     animation = fade,1,10,default
-#     animation = workspaces,1,3,default,fade
-#     animation = specialWorkspace,1,6,default
-# }
+    # bezier curve
+    bezier = overshot, 0.05, 0.9, 0.1, 1.05
+    # bezier = overshot, 0.13, 0.99, 0.29, 1.1
+    bezier = smoothOut, 0.36, 0, 0.66, -0.56
+    bezier = smoothIn, 0.25, 1, 0.5, 1
+    # animation list
+    animation = windows, 1, 5, overshot, slide
+    animation = windowsOut, 1, 4, smoothOut, slide
+    animation = windowsMove, 1, 4, default
+    animation = border, 1, 10, default
+    animation = fade, 1, 10, smoothIn
+    animation = fadeDim, 1, 10, smoothIn
+    animation = workspaces, 1, 6, overshot,slide
+}
 
 dwindle {
     pseudotile = false # enable pseudotiling on dwindle
@@ -75,6 +79,8 @@ gestures {
 misc {
      no_vfr = false
      mouse_move_enables_dpms = false
+     enable_swallow = true
+     swallow_regex = ^(Alacritty)$
 }
 
 binds {
