--- a/.config/hypr/hyprland/windowBinds.conf
+++ b/.config/hypr/hyprland/windowBinds.conf
@@ -5,7 +5,7 @@ bind = SUPER,F,fullscreen,1
 bind = SUPER,P,pseudo,
 bind = SUPER,EQUAL,pin
 bind = ALT,TAB,cyclenext,
-bind = SUPER,MINUS,togglespecialworkspace,
+bind = SUPER,TAB,workspace,e+1
 
 bind = SUPER,left,movefocus,l
 bind = SUPER,right,movefocus,r
@@ -32,6 +32,7 @@ bind = SUPER,7,workspace,7
 bind = SUPER,8,workspace,8
 bind = SUPER,9,workspace,9
 bind = SUPER,0,workspace,10
+bind = SUPER,GRAVE,togglespecialworkspace,
 
 bind = ALT,1,movetoworkspace,1
 bind = ALT,2,movetoworkspace,2
@@ -43,4 +44,4 @@ bind = ALT,7,movetoworkspace,7
 bind = ALT,8,movetoworkspace,8
 bind = ALT,9,movetoworkspace,9
 bind = ALT,0,movetoworkspace,10
-bind = ALT,MINUS,movetoworkspace,special
+bind = ALT,GRAVE,movetoworkspace,special
