--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,6 +2,7 @@
 #preload = ~/Pictures/Wallpapers/no-mans-sky.jpg
 #preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
 #preload = ~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
-preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+# preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+preload = ~/Pictures/Wallpapers/img1.wallspic.com-fractal_art-purple-azure-art-violet-4500x1928.png
 
-wallpaper = eDP-1,~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/img1.wallspic.com-fractal_art-purple-azure-art-violet-4500x1928.png
