--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,3 +13,5 @@ monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
 # Blur LayerSurfaces
 blurls=waybar
 blurls=wob
+blurls=lockscreen
+# blurls=gtk-layer-shell
