--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -14,7 +14,7 @@ bind = SUPER,COMMA,exec,$vault
 bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
 bind = SUPER,PERIOD,exec,$games
-bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
+# bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPER, C, exec, hyprpicker -a -n
@@ -24,3 +24,4 @@ bind = SUPER,Y,exec,eww open workspace --toggle
 bind = SUPER,I,exec,eww open date --toggle
 bind = SUPER,O,exec,eww open music --toggle
 bind = SUPERALT,P,exec,eww close-all
+bind = SUPERSHIFT,Q,exec,eww open powermenu --toggle
