--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -15,9 +15,10 @@ windowrule = float,title:^(Firefox — Sharing Indicator)$
 windowrule = move 1100 15, title:^(Firefox — Sharing Indicator)$
 windowrule = noblur,^(firefox)$
 windowrule = opaque,^(firefox)$
-windowrule = idleinhibit fullscreen, firefox
+windowrule = idleinhibit fullscreen,firefox
 
-windowrule = idleinhibit focus, mpv
+windowrule = idleinhibit focus,mpv
+windowrule = fullscreen,mpv
 
 windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
