--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -19,7 +19,7 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 0
-    col.active_border = 0x0073d0ff
+    col.active_border = 0x55CCCAC2
     col.inactive_border = 0xaa95e6cb
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -29,14 +29,14 @@ general {
 decoration {
     rounding = 10
     blur = true
-    blur_size = 10 # minimum 1
-    blur_passes = 4 # minimum 1, more passes = more resource intensive.
+    blur_size = 8 # minimum 1
+    blur_passes = 3 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations = true
-    active_opacity = 0.9
-    inactive_opacity = 0.9
+    active_opacity = 0.95
+    inactive_opacity = 0.95
 }
 
 bezier=slow,0,0.85,0.3,1
