--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -37,7 +37,7 @@ auto-scale = false              # Automatically choose above setting
 tracklist-y-text-offset = 0     # If you're using a UI scale, you may need to tweak this.
 
 [ui]
-theme-name = "Ayu"
+theme-name = "Ayu Dark"
 mac-style = false               # Use macOS style window buttons
 allow-art-zoom = true
 scroll-gallery-by-row = true
