chore: hyprland animations, change term to kitty

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,4 +1,4 @@
-bind = SUPER,return,exec,alacritty
+bind = SUPER,return,exec,kitty
 bind = SUPERSHIFT,B,exec,firefox
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
