--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -39,29 +39,28 @@ decoration {
     inactive_opacity = 0.95
 }
 
-bezier=slow,0,0.85,0.3,1
-bezier=overshot,0.7,0.6,0.1,1.1
-
 animations {
     enabled=true
+
+    # bezier=slow,0,0.85,0.3,1
+    # bezier=overshot,0.7,0.6,0.1,1.1
+
     # animation=windows,1,5,overshot,slide
     # animation=border,1,20,default
     # animation=fade,1,5,default
     # animation=workspaces,1,6,default,slide
 
-    # bezier curve
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
     # bezier = overshot, 0.13, 0.99, 0.29, 1.1
     bezier = smoothOut, 0.36, 0, 0.66, -0.56
     bezier = smoothIn, 0.25, 1, 0.5, 1
-    # animation list
+
     animation = windows, 1, 5, overshot, slide
-    animation = windowsOut, 1, 4, smoothOut, slide
+    animation = windowsOut, 1, 4, smoothIn, slide
     animation = windowsMove, 1, 4, default
-    animation = border, 1, 10, default
-    animation = fade, 1, 10, smoothIn
-    animation = fadeDim, 1, 10, smoothIn
-    animation = workspaces, 1, 6, overshot,slide
+    animation = border, 1, 20, default
+    animation = fade, 1, 5, smoothIn
+    animation = workspaces, 1, 6, overshot, slide
 }
 
 dwindle {
