style(Tauon Music Box): font and ayu dark theme

--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -73,9 +73,9 @@ gallery-center-text = false
 [fonts]
 # Changes will require app restart.
 use-custom-fonts = true         # Setting to false will reset below settings to default on restart
-font-main-standard = "Iosevka", "IBM Plex Sans, Noto Sans"  # Sugested alternate: Liberation Sans
-font-main-medium = "Iosevka", "IBM Plex Sans, Noto Sans, Medium"
-font-main-bold = "Iosevka", "IBM Plex Sans, Noto Sans, Bold"
+font-main-standard = "IBM Plex Sans, Noto Sans"  # Sugested alternate: Liberation Sans
+font-main-medium = "IBM Plex Sans, Noto Sans, Medium"
+font-main-bold = "IBM Plex Sans, Noto Sans, Bold"
 
 [tracklist]
 double-digit-indices = false
