--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,8 +16,8 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 2.5
+    gaps_out = 5
     border_size = 0
     col.active_border = 0x55CCCAC2
     col.inactive_border = 0xaa95e6cb
@@ -79,7 +79,7 @@ misc {
      no_vfr = false
      mouse_move_enables_dpms = false
      enable_swallow = true
-     swallow_regex = ^(Alacritty)$
+     swallow_regex = ^(kitty)$
 }
 
 binds {
