chore!(Arch Linux): kitty, firefox, grub, wob

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,5 +1,6 @@
 bind = SUPER,return,exec,kitty
-bind = SUPERSHIFT,B,exec,firefox
+bind = SUPERSHIFT,return,exec,[float]kitty
+bind = SUPERSHIFT,B,exec,firefox-developer-edition
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
@@ -13,7 +14,7 @@ bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
 bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
-bind = SUPER,PERIOD,exec,$games
+bind = SUPER,PERIOD,exec,[float]$games
 # bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
