--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -9,6 +9,6 @@ exec-once = mako
 exec-once = eww daemon
 exec-once = eww open workspace
 exec-once = kdeconnect-indicator
-exec-once = $wob
-exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | $wob
+exec-once = wob
+exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = hyprpaper
