--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -11,11 +11,12 @@
 windowrule = float, zoom
 
 windowrule = float,title:^(Picture-in-Picture)$
-windowrule = float,title:^(Firefox — Sharing Indicator)$
-windowrule = move 1100 15, title:^(Firefox — Sharing Indicator)$
-windowrule = noblur,^(firefox)$
-windowrule = opaque,^(firefox)$
-windowrule = idleinhibit fullscreen,firefox
+windowrule = float,title:^(Firefox Developer Edition — Sharing Indicator)$
+windowrule = move 1850 55, title:^(Firefox Developer Edition — Sharing Indicator)$
+windowrule = rounding 0,title:^(Firefox Developer Edition — Sharing Indicator)$
+windowrule = noblur,^(firefoxdeveloperedition)$
+windowrule = opaque,^(firefoxdeveloperedition)$
+# windowrule = idleinhibit fullscreen,firefox
 
 windowrule = idleinhibit focus,mpv
 windowrule = fullscreen,mpv
@@ -23,5 +24,4 @@ windowrule = fullscreen,mpv
 windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
 windowrule = float,title:About*
-#windowrule = float,title:Storage
 windowrule = float,class:org.kde.kdeconnect.daemon
