chore: bluetooth reconnect bind

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -19,6 +19,7 @@ bind = SUPER,PERIOD,exec,[float]$games
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPER, C, exec, hyprpicker -a -n
+bind = SUPER, SLASH, exec, bluetoothctl disconnect A3:40:01:F9:EA:34; bluetoothctl connect A3:40:01:F9:EA:34
 
 bind = SUPER,U,exec,eww open bar --toggle
 bind = SUPER,Y,exec,eww open workspace --toggle
