feat(hyprland): polkit

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -9,17 +9,18 @@ bind = SUPERSHIFT,Z,exec,zotero
 bind = SUPERSHIFT,C,exec,gnome-calculator
 bind = SUPERSHIFT,S,exec,gnome-control-center
 bind = SUPERSHIFT,V,exec,code
+bind = SUPERSHIFT,N,exec,kitty nvim
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
 bind = SUPERALT,COMMA,exec,$vaultPersistent
 bind = SUPERSHIFT,COMMA,exec,encfs -u ~/Vaults/Han
-bind = SUPER,PERIOD,exec,[float]$games
+bind = SUPER,PERIOD,exec,$games
 # bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPER, C, exec, hyprpicker -a -n
-bind = SUPER, SLASH, exec, bluetoothctl disconnect A3:40:01:F9:EA:34; bluetoothctl connect A3:40:01:F9:EA:34
+bind = SUPER, SLASH, exec, bluetoothctl disconnect A3:40:01:F9:EA:34; sleep 3; bluetoothctl connect A3:40:01:F9:EA:34
 
 bind = SUPER,U,exec,eww open bar --toggle
 bind = SUPER,Y,exec,eww open workspace --toggle
