--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -19,7 +19,7 @@ windowrule = opaque,^(firefoxdeveloperedition)$
 # windowrule = idleinhibit fullscreen,firefox
 
 windowrule = idleinhibit focus,mpv
-windowrule = fullscreen,mpv
+# windowrule = fullscreen,mpv
 
 windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
