--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -3,7 +3,7 @@ $modules = $HOME/.local/share/bin
 $lock = swaylock -f -i ~/Pictures/Wallpapers/LYgleEoI_4x.jpg
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $vaultPersistent = encfs --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
-$games = kitty udisksctl mount --block-device /dev/nvme0n1p4
+$games = udisksctl mount --block-device /dev/nvme0n1p4
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
 $launcher = killall rofi || rofi -show drun -theme ~/.config/rofi/launcher.rasi
